    - rewritten data fixer system. Incompatible with old one. Old stuff still arrival, but deprecated
    - old worlds are still load-able as data-fixers were ported
    - improved loading & generation screens
    - added /shuffledata command for shuffling recipes & loot table outputs with other ones
        (must be activated in config files)
    - added data gen system for textures

    fixed issues:
        long-term issues:
            - crafting output slot was added to inventory
            - loading bars of mod loading where not in the middle
            - % in world gen / load screen was calculated wrong leading into negative %
            - crafting slot could get saved when closing the game

        since last snapshot:
            - generator for recipe generator was not parsing output correctly leading into errors in the recipes


changelog of snapshot 20w24a released on 10.06.2020 (theme: refactoring & data generators)
    WARNING: this snapshot WILL break some backward-compatibility as it moved a lot of stuff around. Use the constants
        in globals.py for allocation.
    WARNING: this snapshot adds data generators. They are useful, but currently complicated to set up. We will add
        in the future an mdk generator script for setting up an mdk package with all run-configurations,
        launcher bindings and useful helper scripts like building it into an final zip file
    WARNING: this snapshot changed the way how the dev-environment is packaged. This may lead into problems
    WARNING: this snapshot changed the way how final end-user directories look like and what can be modified,
        See globals.py for the locations, do NOT use G.local+"/build/[...]", use G.build+"/[...]"!!!!
    WARNING: as data generators are now an thing, you can NOT rely on that your game will load up completely as an mod.
        There is the extreme "--data-gen --exit-after-data-gen --no-window" mode in which no window will open