@@ -50,3 +50,4 @@ marked for removal in alpha 1.4.0:
 marked for removal in alpha 1.5.0:
     remove support for non-prefixed mcpython imports
     BlockModelFactory.py, ModelFactory.py, RecipeFactory.py
+    [1] texture factory system, replace by data gen
