@@ -1,5 +1,0 @@
-{
-  "replace": false,
-  "values": ["white", "orange", "magenta", "light_blue", "yellow", "lime", "pink", "gray", "light_gray", "cyan",
-    "purple", "blue", "brown", "green", "red", "black"]
-}
