@@ -1,4 +1,0 @@
-{
-  "replace": false,
-  "values": ["iron", "gold", "diamond", "coal", "emerald", "lapis", "redstone"]
-}
