@@ -1,4 +1,0 @@
-{
-  "replace": false,
-  "values": ["axe", "pickaxe", "shovel", "hoe", "sword"]
-}
