@@ -1,4 +1,0 @@
-{
-  "replace": false,
-  "values": ["acacia", "birch", "dark_oak", "jungle", "oak", "spruce"]
-}
