@@ -53,6 +53,7 @@ changelog of snapshot [next]
     - added /shuffledata command for shuffling recipes & loot table outputs with other ones
         (must be activated in config files)
     - added data gen system for textures
+    - changed order of loading stages to be more functional
 
     fixed issues:
         long-term issues:
